# Octopus

./: .deepsource.toml  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
base/: Cargo.toml
base/src/: lib.rs
base/src/client/: mod.rs
base/src/config/: mod.rs
config/: default.toml
docs/: exchanges.md
elder/: Cargo.toml
elder/src/: constant.rs  lib.rs
elder/src/broker/: mod.rs
elder/src/broker/binance/: mod.rs
elder/src/broker/ib/: mod.rs
elder/src/controller/: mod.rs
elder/src/strategy/: mod.rs
example/dl/: Cargo.toml
example/dl/src/: main.rs
example/influx/: Cargo.toml
example/influx/src/: main.rs
example/testing/src/: main.rs
exchange/: Cargo.toml
exchange/src/: client.rs  errors.rs  lib.rs
exchange/src/binance/: client.rs  mod.rs  parameters.rs  transport.rs
exchange/src/binance/model/: mod.rs
exchange/src/shared/: environment.rs  mod.rs
exchange/src/shared/model/: mod.rs
src/: main.rs
src/core/: constant.rs  mod.rs
src/core/broker/: constant.rs  mod.rs
src/core/broker/binance/: mod.rs
src/core/broker/ib/: mod.rs
src/entity/: group.rs  mod.rs  prelude.rs  user.rs
src/utils/: request.rs
web/: package-lock.json  package.json
