[package]
name = "octopus"
version = "0.1.0"
edition = "2021"
description = "Octopus is Deep learning based bot that have the ability to trade automatically"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]
keywords = ["octopus", "bot", "stop", "trade", "binance", "deep", "learning"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/workfoxes/octopus"


[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3.0.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
sea-orm = { version = "0.6.0", default-features = false, features = [ "macros", "debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }
base = { version="0.1.0", path="base" }

