[package]
name = "exchange"
version = "0.1.0"
edition = "2021"
keywords = ["cryptocurrency", "exchange", "octopus", "api"]
description = "Exchange API"
license = "MIT"



[dependencies]
async-trait = "0.1"
futures = "0.3.12"
chrono = "0.4.19"
hex = "0.4.2"
log = "0.4.8"
hmac = "0.8.1"
sha2 = "0.9.1"
rust_decimal = "1.10.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
derive_more = "0.99.11"
serde_urlencoded = "0.7.0"
thiserror = "1.0.23"
openlimits-messaging = "0.1"
derive_more = "0.99.11"
url = "2.2.0"
anyhow = "1.0.38"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio-tungstenite = { version = "0.13", features = ["tls"] }
tokio = "1.6.0"

